# nopearokotus

./: .gitignore  fetch_data.py  finland_q2.json  generate_forecasts.py  main.md  model_schema.json  models.py  plot_forecasts.py  pyproject.toml  readme.md  test_vaccination_forecast.py  vaccination_forecast.py
