[tool.poetry]
name = "nopearokotus"
version = "0.1.0"
description = "Nopeamman rokotuksen verkkosivusto"
authors = ["Jarkko Miettinen <jarkko.miettinen@iki.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
matplotlib = "^3.3.4"
requests = "^2.25.1"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
